--- a/src/components/databaseList/DatabaseList.module.css
+++ b/src/components/databaseList/DatabaseList.module.css
@@ -3,9 +3,19 @@
     flex-grow: 1;
     min-width: 260px;
     min-height: 100px;
-    scroll-padding-bottom: 50%;
 }
 
-.scrollbar {
+::-webkit-scrollbar {
+    width:5px;
+}
 
+::-webkit-scrollbar-track {
+    background-color: darkgrey;
+    opacity: 10;
+    border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    opacity: 1;
 }
